--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ layout: landing
 								<p>
                                     Algunos juegos anteriores:
                                     <ul>
-                                        <li><a href="https://reflektor.protocultura.net/">Reflektor</a> (2013)</li>
+                                        <li><a href="http://reflektor.protocultura.net/">Reflektor</a> (2013)</li>
                                         <li><a href="https://ventilagon.protocultura.net/">Super Ventilagon</a> (2015)</li>
-                                        <li><a href="https://megajuegos.com.ar/">Vigilen los Cielos</a> (2016)</li>
+                                        <li><a href="https://www.megajuegos.com.ar/">Vigilen los Cielos</a> (2016)</li>
                                     </ul>
 								</p>
 							</header>
