--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: landing
 ---
-        <!-- div id="arriba">
+        <div id="arriba">
             <a href="/en/">English</a>
-        </div -->
+        </div>
         <video autoplay loop muted poster="images/banner.jpg" id="bgvid">
             <source src="images/banner.mp4" type="video/mp4">
             <!--source src="images/banner.webm" type="video/webm"-->
@@ -72,7 +72,7 @@ layout: landing
               <div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
                 <h2>El código y hardware<br />
                 son libres y abiertos</h2>
-                <p>Si tenés un ventilador o lavarropa que ya no uses, podés armarte una ventilastation en tu casa visitando nuestra página en <a href="https://github.com/alecu/ventilastation">GitHub</a>.</p>
+                <p>Si tenés un ventilador o lavarropa que ya no uses, podés armarte una ventilastation en tu casa visitando nuestra página en <a href="https://github.com/ventilastation/vsdk">GitHub</a>.</p>
               </div>
             </section>
           </section>
@@ -142,7 +142,7 @@ layout: landing
                 Para simplificar la creación de juegos para esta consola, se eligió el lenguaje <a href="https://micropython.org/">Micropython</a>.
                 </p>
                 <p>
-                Como ejemplo, el juego Vyruss consta de menos de 700 líneas, y se puede ver en el <a href="https://github.com/alecu/ventilastation/blob/master/vyruss/python/vyruss.py">repositorio del proyecto</a>.
+                Como ejemplo, el juego Vyruss consta de menos de 700 líneas, y se puede ver en el <a href="https://github.com/ventilastation/vsdk/blob/main/apps/micropython/apps/vyruss.py">repositorio del proyecto</a>.
                 </p>
               </header>
             </div>
@@ -156,7 +156,7 @@ layout: landing
                 <p>
                   Todo el código fuente, los esquemáticos y los planos para armar Ventilastation están disponibles abiertamente, como software y hardware libre.
                 </p>
-                <p>Si tenés un ventilador o lavarropa que ya no uses, podés armarte una ventilastation en tu casa visitando nuestra página en <a href="https://github.com/alecu/ventilastation">GitHub</a>.</p>
+                <p>Si tenés un ventilador o lavarropa que ya no uses, podés armarte una ventilastation en tu casa visitando nuestra página en <a href="https://github.com/ventilastation/vsdk">GitHub</a>.</p>
               </header>
             </div>
           </section>
