--- a/en/index.html
+++ b/en/index.html
@@ -13,8 +13,8 @@ layout: landing
 		<section id="banner">
 		<div class="inner">
 			<h2>{{ site.title }}</h2>
-			<p>An open hardware<br />
-				electromechanical game.</p>
+			<p>The first electromechanical game console from South America.<br />
+				Open Source, Open Hardware.</p>
 			<ul class="actions">
 			<li><a href="#what" class="scrolly button">What is it?</a></li>
 			<li><a href="#how" class="scrolly button">How to play?</a></li>
