--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ layout: landing
             </div>
           </section>
 
-          <!-- Como jugar -->
+          <!-- Hacer juegos -->
           <section id="juegos" class="wrapper style1 special">
             <div class="inner">
               <header class="major">
@@ -148,7 +148,7 @@ layout: landing
             </div>
           </section>
 
-          <!-- Como jugar -->
+          <!-- Construir una consola -->
           <section id="hardware" class="wrapper style3 special">
             <div class="inner">
               <header class="major">
