--- a/en/index.html
+++ b/en/index.html
@@ -21,7 +21,7 @@ layout: landing
 			<li><a href="#hardware" class="scrolly button">Build one</a></li>
 			</ul>
 		</div>
-		<a href="#one" class="more scrolly">More Info</a>
+		<a href="#what" class="more scrolly">More Info</a>
 		</section>
 
           <!-- One -->
@@ -125,7 +125,7 @@ layout: landing
                 </p>
                 <p>
                   Get started in the <a href="https://github.com/ventilastation/vsdk">GitHub repository</a>.
-                  And if you ever get stuck, don't hesitate to <a href="mailto:ventilastation@protocultura.net" class="button fit special">contact us</a>, we are happy to help more folks build their own.
+                  And if you ever get stuck, don't hesitate to <a href="mailto:ventilastation@protocultura.net">contact us</a>, we are happy to help more folks build their own.
                 </p>
               </header>
             </div>
