Video of Ventilastation being played

--- a/en/index.html
+++ b/en/index.html
@@ -38,11 +38,10 @@ layout: landing
                   it builds on its predecesor's circular display by adding sprite based 8-bit like graphics,
                   and super easy programmability with Micropython.
                 </p>
-                <!--
+                
                 <div class='embed-container'>
-                  <iframe src='http://www.youtube.com/embed/EkVrdfTI3RM?rel=0&amp;showinfo=0' frameborder='0' allowfullscreen></iframe>
+                  <iframe src='http://www.youtube.com/embed/FO-YtMzeM9U?rel=0&amp;showinfo=0' frameborder='0' allowfullscreen></iframe>
                 </div>
-                -->
               </header>
               <!--ul class="icons major">
                 <li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
